fix: fixed bug where background color of result container would be wrong in both light and dark mode

--- a/src/main/sass/foundation/sidebar.sass
+++ b/src/main/sass/foundation/sidebar.sass
@@ -67,7 +67,7 @@
             padding: 5px
             width: 100%
             @include theme()
-                background-color: theme-get('row_names_background_color')
+                background-color: theme-get('complementary_color')
 
             &:empty::before
                 content: "No items"
